another fix to accomodate removal of cov5 and associated classes; temp fix for the legend issue on small/laptop screens

--- a/css/app102.css
+++ b/css/app102.css
@@ -56,7 +56,7 @@ body{
 }
 
 #toc{
-	height: 20%;
+	height: 30%;
 	position: absolute;
 	bottom: 0px;
 	left:0px;
@@ -64,7 +64,7 @@ body{
 	background-color: white !important;
 	padding: 4px;
 	border: solid 4px;
-	min-height: 150px;
+	//min-height: 210px;
 }
 
 .toc-button:hover{
@@ -144,7 +144,7 @@ body{
 /* for css when *DESKTOP* mode is engaged */
 @media (min-width: 768px){
 	.toc-view{
-		height: 20%;
+		height: 30%;
 		min-height: 150px;
 		background-color: #619ec7 !important;
 	}
@@ -187,7 +187,7 @@ body{
 	cursor: pointer;
 	text-align: center;
 	opacity: 0;
-	bottom: 20%;
+	bottom: 30%;
 	color: black;
 }
 .toc-button-unfade{
@@ -219,7 +219,7 @@ body{
 	position: absolute;
 	top:0px;
 	left:0px;
-	height: 80%;
+	height: 70%;
 }
 .toc-view{
 	padding:4px;
@@ -228,7 +228,7 @@ body{
 	position: absolute;
 	bottom: 0px;
 	left: 0px;
-	height: 20%!important;
+	height: 30%!important;
 }
 .toc-view-closed{
 	height: 1%;
@@ -754,7 +754,7 @@ button.active{
 }
 
 #map{
-	height: 80%;
+	height: 70%;
 	width: 100%;
 }
 
